Common/src/main/java/org/example/error/ExitObligedException.java
package org.example.error;

/**
 * Класс исключения для выхода из программы
 */
public class ExitObligedException extends InterruptedException {
}